styles/portfolio.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    /* background-color: #FFF8F3; */
}
/* shared style */
.font-open-sans{
  font-family: "Open Sans", sans-serif;
  font-optical-sizing: auto;
}
/* main style */
.logo h2{
    font-size: 45px;
    font-weight: 900;
}
.color-logo{
    color: #b700ff;
    
}
.btn{
    background-color: #b700ff;
    border: none;
    padding: 18px 35px;
    border-radius: 5px;
    font-size: 20px;
    font-weight: bold;
    color:#ffffff;
    cursor: pointer;
}
.section-heading{
    max-width: 827px;
    text-align: center;
    margin: 0 auto;
}
.section-heading h2{
    font-size:35px;
    font-weight: bold;
    margin-bottom: 35px;
}
.section-heading p{
    font-size: 18px;
    color: #757575;
    line-height: 30px;
    margin-bottom: 30px;
}
.text-center{
    text-align: center;
    margin-top: 50px;
}
header{
        background-color: #FFF8F3;
        background: url(../images/developer.png),url(../images/header_bg.png),#FFF8F3;
        background-position: 23px 38px, bottom right;
        background-repeat: no-repeat;
        padding-top: 50px;
}
nav{
    width: 71%;
    max-width: 1140px;
    /* border: 1px solid red; */
    margin: 0px auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
nav .menu{
    display: flex;
    list-style-type: none;
    gap:51px;
}
nav .menu a {
    font-size: 20px;
    color: #474747;
    text-decoration: none;

}
#banner{
    /* border: 1px solid red; */
    margin: 46px 38px 0px 230px ;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
#banner .banner-content{
    max-width:585px ;
}
#banner .banner-content h2{
    font-size:45px;
    font-weight: 600;
    color: #474747;
    margin-bottom: 5px;
}
#banner .banner-content h1{
    font-size: 85px;
    font-weight: bold;
    color: #181818;
    margin-bottom: 20px;

}
#banner .banner-content p{
    font-size: 18px;
    color: #757575;
    line-height: 30px;
    margin-bottom: 30px;
}
#banner .banner-image img{
    max-width: 585px;
    max-height: 676px;
    vertical-align: middle;
}
#about,#skill,#resume{
    padding-top: 130px;

}
#about .about-container{
    width: 71%; 
    max-width: 1140px;
    margin: 0 auto;
    text-align: center;
    background-color: #FFF8F3;
    padding: 131px 157px;
}

#about .about-container .about-info{
    display: flex;
    justify-content: space-around;
     /* gap: 50px; */
}
/* .about-info .info-card{
    text-align: center;
     /* max-width: 180px; }*/

.about-info .info-card p{
    font-size: 18px;
    color: #757575;
    line-height: 30px;
    
}
.about-info .info-card h4{
    font-size: 20px;
    display: flex;
    font-weight: bold;
    line-height: 30px;
    /* text-wrap: nowrap; */
}

#skill .skill-container{
    width: 71%; 
    max-width: 1140px;
    margin: 0 auto;

 } 
 #skill .skill-container .skill-box{
    display: flex;
    gap: 24px;
    

 }
 .skill-box .skill-card{
    padding:30px;
    /* border: 1px solid #c91111; */
    max-width:267px;
    box-shadow: 0px 4px 50px 0px #0000003a ;
    border-radius: 10px;


 }
 .skill-card img{
    max-width: 44px;
    margin-bottom: 30px;

 }
  .skill-card h3{
    font-size: 20px;
    color: #181818;
    margin-bottom: 20px;
  }
  .skill-card p{
    font-size: 16px;
    color: #757575;
    line-height: 28px;
   
  }
#resume .resume-container{
    width: 71%; 
    max-width: 1140px;
    margin: 113px auto 0;
    display: flex;
    gap: 24px;
}
.resume-container hr{
    margin: 30px 0;
}
.resume-container .section-title{
    color: #474747;
    font-size: 30px;
    margin-bottom: 30px;
}
.resume-card{
    max-width: 511px;
    margin-right:47px;
}
.resume-card .card-title{
    font-size: 25px;
    font-weight: bold;
    margin-bottom: 10px;
    color: #474747;
}
.resume-card .card-info{
    font-size: 20px;
    font-weight: 600;
    margin-bottom: 20px;
    color: #757575;
}
.resume-card .card-text{
    font-size: 16px;
    line-height: 28px;
    color: #757575;
}


footer{
    margin-top: 130px;
    background-color: #FFF8F3;
    padding: 130px 0;  
}
footer .footer-container{
    width: 71%;
    max-width: 1140px;
    margin: 0 auto;
    display: flex;
    gap: 116px;

}
 .footer-container .social{
    max-width: 562px;
 }

  .footer-container .social p{
    font-size: 16px;
    color: #474747;
    line-height: 28px;
    margin-bottom: 30px;
}
 .footer-container h2{
    font-size: 35px;
    margin-bottom: 20px;
    color: #181818;
 }
 .footer-container .icon a{
    margin-right: 24px;
 }
 .footer-container form input[type="text"] ,.footer-container form textarea{
    width: 461px;
    padding: 18px 31px;
    margin-bottom: 24px;
    border: none;
    border-radius: 5px;

    color: #757575;
 }

